@@ -1,7 +1,7 @@
 ;;; -*-scheme-*-
 
 (debug-set! maxdepth 100000)
-(debug-set! stack    2000000)
+(debug-set! stack    200000)
 
 (define-module (g-wrapped gw-core-utils-spec))
 
