@@ -1,7 +1,7 @@
 (define-module (g-wrapped gw-report-system-spec))
 
 (debug-set! maxdepth 100000)
-(debug-set! stack    2000000)
+(debug-set! stack    200000)
 
 (use-modules (g-wrap))
 
