@@ -1,3 +1,8 @@
+2006-03-13  Christian Stimming <stimming@tuhh.de>
+
+	* */*.scm: Reduce debug stack size from 2,000,000 to 200,000
+	because guile on windows will only accept the smaller value.
+
 2006-03-12  David Hampton  <hampton@employees.org>
 
 	* src/gnome-utils/gnc-main-window.[ch]:
